Replaced new URL() with new URI().toURL()