@@ -29,6 +29,7 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 import java.util.Iterator;
@@ -265,7 +266,7 @@ public class LTIRegistration extends HttpServlet {
 		
 		if (!url.isEmpty() && !url.startsWith("http")) url = "https://" + url;
 		try {
-			new URL(url);   // throws Exception if URL is not formatted correctly
+			new URI(url).toURL();   // throws Exception if URL is not formatted correctly
 		} catch (Exception e) {
 			throw new Exception("Invalid domain name (" + url + "). " + e.toString());
 		}
@@ -310,7 +311,7 @@ public class LTIRegistration extends HttpServlet {
 	boolean reCaptchaOK(HttpServletRequest request) throws Exception {
 		String queryString = "secret=" + Subject.getReCaptchaSecret() + "&response=" 
 				+ request.getParameter("g-recaptcha-response") + "&remoteip=" + request.getRemoteAddr();
-		URL u = new URL("https://www.google.com/recaptcha/api/siteverify");
+		URL u = new URI("https://www.google.com/recaptcha/api/siteverify").toURL();
     	HttpURLConnection uc = (HttpURLConnection) u.openConnection();
     	uc.setDoOutput(true);
     	uc.setRequestMethod("POST");
@@ -536,7 +537,7 @@ public class LTIRegistration extends HttpServlet {
 	String getConfigurationJson(String iss,String lms) {
 		String domain = null;
 		try {
-			domain = new URL(iss).getHost();
+			domain = new URI(iss).toURL().getHost();
 		} catch (Exception e) { 
 			return "Domain was not valid."; 
 		}
@@ -599,7 +600,7 @@ public class LTIRegistration extends HttpServlet {
 	JsonObject getOpenIdConfiguration(HttpServletRequest request) throws Exception {
 	 	// This method retrieves the OpenID Configuration from the platform for Dynamic Registration
     	try {
-    		URL u = new URL(request.getParameter("openid_configuration"));
+    		URL u = new URI(request.getParameter("openid_configuration")).toURL();
     		HttpURLConnection uc = (HttpURLConnection) u.openConnection();
     		uc.setDoInput(true);
     		uc.setRequestMethod("GET");
@@ -618,8 +619,8 @@ public class LTIRegistration extends HttpServlet {
 	
 	void validateOpenIdConfigurationURL(String openIdConfigurationURL, JsonObject openIdConfiguration) throws Exception {
 		try {
-			URL issuer = new URL(openIdConfiguration.get("issuer").getAsString());
-			URL config = new URL(openIdConfigurationURL);
+			URL issuer = new URI(openIdConfiguration.get("issuer").getAsString()).toURL();
+			URL config = new URI(openIdConfigurationURL).toURL();
 			if (!issuer.getProtocol().contains("https")) throw new Exception("Issuer protocol must be https:// ");
 			if (!config.getProtocol().contains("https")) throw new Exception("OpenID configuration URL protocol must be https:// ");
 			if (!issuer.getHost().equals(config.getHost())) throw new Exception("Host names of issuer and openid_configuration URL must match. ");
@@ -734,7 +735,7 @@ public class LTIRegistration extends HttpServlet {
 		String reg_endpoint = openIdConfiguration.get("registration_endpoint").getAsString();
 		debug.append("b");
 
-		URL u = new URL(reg_endpoint);
+		URL u = new URI(reg_endpoint).toURL();
 		HttpURLConnection uc = (HttpURLConnection) u.openConnection();
 		uc.setRequestMethod("POST");
 		if (registrationToken != null) uc.setRequestProperty("Authorization", "Bearer " + registrationToken);
